[bumpversion]
current_version = 0.9.8
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:pygray/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[metadata]
description-file = README.md

[flake8]
exclude = docs
ignore = E501

[aliases]
test=pytest
